# gws-audit-analytics-pipeline

./: .gitignore  README.md  analyze.py  fetcher.py  pyproject.toml  workspace.yaml
gws-pipeline/: Dockerfile  pyproject.toml
gws-pipeline/dagster/: dagster.yaml
gws-pipeline/src/gws_pipeline/: definitions.py  jobs.py
gws-pipeline/src/gws_pipeline/core/: __init__.py  config.py  db_loader.py  fetcher.py  models.py  process.py
gws-pipeline/src/gws_pipeline/core/process/: with_beam.py  with_polars.py  with_polars_v2.py
gws-pipeline/src/gws_pipeline/core/schemas/: events.py  parquet_schemas.py
gws-pipeline/src/gws_pipeline/defs/ingestion/: assets.py  resources.py
gws-pipeline/src/gws_pipeline/defs/processing/: assets.py
gws-pipeline/src/gws_pipeline/defs/transformation/beam/: assets.py
gws_audit_analyzer/: dbt_project.yml  packages.yml
gws_audit_analyzer/macros/: generate_schema_name.sql
gws_audit_analyzer/models/marts/: schema.yml
gws_audit_analyzer/models/marts/dim/: dim_application.sql  dim_ip_address.sql
gws_audit_analyzer/models/marts/facts/: fact_saml_event.sql
gws_audit_analyzer/models/reporting/: agg_token_top_methods_48h.sql
gws_audit_analyzer/models/sources/: processed.yml
gws_audit_analyzer/models/staging/: stg_saml_events.sql
scripts/: collect_scopes.py
